fixing intercom icon alignment

--- a/src/frontend/styles/app.styl
+++ b/src/frontend/styles/app.styl
@@ -12,8 +12,8 @@
 // Reset
 
 // align intercom icon
-#intercom-container .intercom-launcher-button !important
-	bottom -10px
+#intercom-container .intercom-launcher-button 
+	bottom -10px !important
 
 // Inheriting box-sizing Probably Slightly Better Best-Practice
 // http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
